// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`one label 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "flexDirection": "row",
        "marginBottom": 5,
        "marginTop": 10,
        "width": "100%",
      },
      Object {
        "justifyContent": "space-between",
        "paddingLeft": 0,
        "paddingRight": 0,
      },
    ]
  }
>
  <View
    onLayout={[Function]}
  >
    <Text
      style={
        Object {
          "color": "#0176D2",
          "fontSize": 14,
        }
      }
    >
      <Translation
        passThrough="label"
      />
    </Text>
  </View>
</View>
`;

exports[`two labels 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "flexDirection": "row",
        "marginBottom": 5,
        "marginTop": 10,
        "width": "100%",
      },
      Object {
        "justifyContent": "space-between",
        "paddingLeft": 0,
        "paddingRight": 0,
      },
    ]
  }
>
  <View
    onLayout={[Function]}
  >
    <Text
      style={
        Object {
          "color": "#0176D2",
          "fontSize": 14,
        }
      }
    >
      <Translation
        passThrough="start label"
      />
    </Text>
  </View>
  <View
    onLayout={[Function]}
  >
    <Text
      style={
        Object {
          "color": "#0176D2",
          "fontSize": 14,
        }
      }
    >
      <Translation
        passThrough="end label"
      />
    </Text>
  </View>
</View>
`;
